# diginame

./: .replit  DEPLOYMENT_INSTRUCTIONS.txt  app.py  config.py  deployment_instructions.md  generate_admin_hash.py  generate_icons.py  models.py  pyproject.toml  render.yaml  replit.md  requirements.txt  wsgi.py
.agents/: agent_assets_metadata.toml
.local/state/replit/agent/filesystem/: filesystem_state.json
instance/: blog.db
static/: manifest.json  service-worker.js  sw.js
static/css/: style.css
templates/: admin_settings.html  base.html  category.html  certificate_form.html  change_password.html  dashboard.html  edit_post.html  error.html  import_tutorials.html  index.html  landing.html  login.html  new_post.html  offline.html  post_detail.html
templates/blog/: activity_log.html  admin_settings.html  base.html  category.html  change_password.html  dashboard.html  edit_post.html  import_tutorials.html  index.html  login.html  new_post.html  post_detail.html
templates/super_admin/: change_credentials.html  create_blog.html  dashboard.html  login.html
