[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.3.0",
    "sqlalchemy>=2.0.43",
]
